# vm-power-manager

./: .env.example  .gitignore  .manifest.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: security.yml
docs/: CONFIG_REFERENCE.md  GPU_AVAILABILITY.md  METRICS_SETUP.md  SETUP_GUIDE.md  SLACK_OUTPUTS.md  SSH_METRICS.md
examples/gcp-cloud-function/: config.yaml  deploy.sh  main.py  requirements.txt
examples/local-dev/: app.py  config.yaml  requirements.txt
scripts/: gpu-reservation-setup.sh
src/vm_power_manager/: __init__.py  api.py  bundled_defaults.yaml  config.py  lifecycle.py  manifest.py  models.py  monitor.py  process_detector.py
src/vm_power_manager/adapters/: __init__.py  base.py  gcp.py  ssh.py
src/vm_power_manager/metrics/: __init__.py  monitoring_api.py  ssh_metrics.py
src/vm_power_manager/slack/: __init__.py  access_control.py  commands.py  interactions.py  messages.py
src/vm_power_manager/state/: __init__.py  base.py  file_state.py  firestore.py  gcs_bucket.py  redis_state.py
