[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vm-power-manager"
version = "1.2.0"
description = "Cloud-agnostic VM lifecycle automation with Slack integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tarun Saini", email = "tarunrj99@gmail.com" },
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "google-cloud-compute>=1.14",
    "google-cloud-monitoring>=2.16",
    "google-cloud-storage>=2.14",
    "google-cloud-firestore>=2.16",
    "slack-sdk>=3.27",
    "paramiko>=3.4",
    "requests>=2.31",
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "functions-framework>=3.5",
    "uvicorn>=0.27",
    "fastapi>=0.109",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vm_power_manager"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
